syntax = "proto3";

package usermgmt;

option go_package = "github.com/BrunoIstvan/grpc-user-management-go;grpc_user_management_go";

service UserManagement {

    rpc CreateNewUser(NewUser) returns (User) {}

    rpc GetUsers(GetUserParams) returns (UsersList) {}

}

message NewUser {
    string name = 1;
    int32 age = 2;
}

message User {
    string name = 1;
    int32 age = 2;
    int32 id = 3;
}

message GetUserParams {



}

message UsersList {

    repeated User users = 1;

}
